--- a/ComcastCRMGUIFramework/test-output/old/Default suite/groups.html
+++ b/ComcastCRMGUIFramework/test-output/old/Default suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression test</td><td>CreateContactTest.createContactWithSupportDateTest()[pri:0, instance:com.comcast.crm.contactTest.CreateContactTest@1aafa419]<br/>CreateContactTest.createContactTest()[pri:0, instance:com.comcast.crm.contactTest.CreateContactTest@1aafa419]<br/>CreateContactTest.createContactWithOrgTest()[pri:0, instance:com.comcast.crm.contactTest.CreateContactTest@1aafa419]<br/></td></tr>
-<tr><td>smoke test</td><td>CreateContactTest.createContactTest()[pri:0, instance:com.comcast.crm.contactTest.CreateContactTest@1aafa419]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke test</td><td>CreateOrganizationTest.createOrganizationWithMandatoryTest()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganizationTest@7cc0cdad]<br/></td></tr>
 </table>
